--- a/style.css
+++ b/style.css
@@ -1,385 +1,445 @@
-table, th, td {
-    border:1px solid black;
+*,
+*::before,
+*::after {
+    box-sizing: border-box!important;
 }
-* {
+
+:root {
+    --ff-primary: "Source Sans Pro", sans-serif!important;
+    --ff-secondary: "Source Code Pro", monospace!important; 
+
+    --fw-reg: 300;
+    --fw-bold: 900;
+
+    --clr-light: #fff;
+    --clr-dark: #303030;
+    --clr-accent: #3bbb9a;
+
+    --fs-h1: 3rem;
+    --fs-h2: 2.25rem;
+    --fs-h3: 1.25rem;
+    --fs-body: 1rem;
+
+    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
+         0.125em 0.125em 0.25em rgba(0,0,0,.15);
+}
+
+@media (min-width: 800px){
+    :root {
+        --fs-h1: 4.5rem;
+        --fs-h2: 3.75rem;
+        --fs-h3: 1.5rem;
+        --fs-body: 1.125rem;
+    }
+}
+
+/* Navigation */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&display=swap');
+*{
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
+    font-family: 'Playfair Display', serif!important;
 }
-        [class*="col-"] {
-        width: 100%;
-}
-
-@media only screen and (min-width: 768px) {
-
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
-}
-
-[class*="col-"] {
-float: left;
-padding: 15px;
-}
-
-.heading {
-    background-color: rgb(71, 71, 71); 
-    box-shadow: 10px 5px 5px black;
-    border-radius: 5%;
-}
-
-.home-page h1 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 400%;
-    font-weight: 800;
-    font-style: oblique;
-    color:#ccb9a9;;
-    text-align: center;
-}
-
-.home-page h2 {
-    font-size: 200%;
-    text-align: center;
-}
-
-.home-page img {
-    border-radius: 50%;
-}
-
-.style-styling {
-    width: 75px;
-    height: 75px;
-    text-align: center;
-    position: relative;
-    margin: auto;
-    left: 5%;
-    bottom: 0%;
-    border-radius: 50%;
-    background-color: red;
-    animation-name: move;
-    animation-duration: 3s;
-    animation-iteration-count: infinite; 
-}
-
-@keyframes move {
-    25% {
-        background-color: green;
-    }
-
-    50% {
-        left: 50%;
-        background-color: yellow;
-    }
-
-    75% {
-        background-color: green;
-    }
-}
-
-.names {
-    color: #ccb9a9;;
-}
-.row::after {
-content: "";
-clear: both;
-display: table;
-} 
-
-.regular-img {
-max-width: 100%;
-height: auto;
-}
-
-.same-size-img {
-    float: left;
-    width:  325px;
-    height: 350px;
-    object-fit: cover;
-
-}
-
-.overflow {
-overflow-x:auto;
-}
-
-.videowrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
+.menu-bar
+{
     width: 100%;
-    height: 100%;
+    height: auto;
+    background-color: #3bbb9a;
+    line-height: 60px;
+    padding: 0px 100px;
+           
+    display: flex;
+    z-index: 1;
+    
+   
 }
-
-  body {
-	background: linear-gradient(-45deg, #c4c4c4, #6e533d, #383838, #d3b1a2);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-	height: 100vh;
-}
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-
-    /*willy css*/
-    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&display=swap');
-
-    *{
-        margin: 0px;
-        padding: 0px;
-        box-sizing: border-box;
-        font-family: 'Playfair Display', serif;
- }
-    .menu-bar
+@media (max-width: 400px)
+{
+    .navbar 
     {
-        
-        width: 100%;
-        height: auto;
-        background-color: #383838;
-        line-height: 60px;
-        padding: 0px 100px;
-               
-        display: flex;
-        z-index: 1;
-        
-        position: fixed;
-    }
-    @media (max-width: 400px)
-    {
-        .navbar 
-        {
-           flex-direction: column;
-          
-        }
-        
-    }
-        
-    .navbar-brand
-    {
-        font-size: 28px !important;
-        font-weight: bold !important;
-        font-style: italic !important;
-        letter-spacing: 1.0px !important;
-        padding-right: 0px !important;
-        
-
-    }
-    nav .navbar-brand 
-    {
-        float:left !important;
-        color: #ccb9a9 !important;
-        text-transform: uppercase !important;
+       flex-direction: column;
+       
     }
     
-    .navbar-nav
-    {
-        float: right;
-    }
-    nav .navbar-nav li
-    {
-        display: inline-block;
-        list-style: none;
-        
-    }
-       
-    .nav-link
-    {
-        color: #ccb9a9 !important;
-        text-decoration: none;
-        font-size:  18px;
-        text-transform: uppercase;
-        padding: 40px 20px;
-        text-align: right;
-        
-    }
-    nav .navbar-nav li a:hover
-    {
-        color:#6e533d!important;
-    }
+}
 
-    nav ul li .active
-    {
-        color: #6e533d;
-    }
-
-    .wc-bio-img 
-    {
-       padding-top: 100px;
-       max-width: 75%;
-       height: auto;
-       padding-left: 15px;
-       padding-right: 15px;
-       padding-top: 100px;
-       flex-grow: 0;
-       flex-shrink: 0;
-       flex-basis: 50%;
-   }
-   .wc-bio-column
-   {
-       max-width: 50%;
-       position: relative;
-       padding-left: 15px;
-       padding-right: 15px;
-       padding-top: 100px;
-       flex-grow: 0;
-       flex-shrink: 0;
-       flex-basis: 50%;
-       
- }
- .wc-row 
- {
-     display:flex;
-     flex-wrap: nowrap;
-     margin-right: -15px;
-     margin-left: -15px;
-
- }
-
- .wc-bio-h1 
- {
-     font-size: 2.25rem;
-     font-family: 'Playfair Display', serif;
-
- }
- .wc-bio-p1 
- {
-     font-size: 1.5rem;
-     font-family: 'Playfair Display', serif;
-
- }
+.navbar-brand
+{
+    font-size: 28px!important;
+    font-weight: bold!important;
+    font-style: italic!important;
+    letter-spacing: 1.0px!important;
+    padding-right: 0px!important;
     
- .wc-css-selector {
-    background: linear-gradient(296deg, #b4713a, #f0af6a, #f7d59c, #ffffff);
-    background-size: 800% 800%;
 
-    -webkit-animation: Wc-Gradient-Anim 31s ease infinite;
-    animation: Wc-Gradient-Anim 31s ease infinite;
+}
+nav .navbar-brand
+{
+    float:left!important;
+    color: #fff!important;
+    text-transform: uppercase!important;
 }
 
-@-webkit-keyframes Wc-Gradient-Anim {
-    0%{background-position:0% 57%}
-    50%{background-position:100% 44%}
-    100%{background-position:0% 57%}
+.navbar-nav
+{
+    float: right;
 }
-@keyframes Wc-Gradient-Anim {
-    0%{background-position:0% 57%}
-    50%{background-position:100% 44%}
-    100%{background-position:0% 57%}
-}
-
-/*Brendon CSS*/
-.bwtextalign {
-    text-align: center;
-}
-
-.backgroundbox {
-    width:800px;
-    height:200px;
-    margin-left: 460px;
-    text-align: center;
-    border: 10px black;
-    padding: 40px;
-    padding-left: 60px;
-    background-color: white;
-    box-shadow: 5px 10px 20px #383838;
-}
-
-.bwh1a {
-    position: relative;
-    -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0,0,0,.2));
-    font-size: 60px;
-}
-
-.bwh1a span {
-    position: relative;
+nav .navbar-nav li
+{
     display: inline-block;
-    color: white;
-    animation: bwh1a 1s infinite;
-    animation-delay: calc(.1s * var(--i));
+    list-style: none;
+    
+}
+   
+.nav-link
+{
+    color: #3b3ebb!important;
+    text-decoration: none;
+    font-size:  18px;
+    text-transform: uppercase;
+    padding: 40px 20px;
+    text-align: right;
+    
+}
+nav .navbar-nav li a:hover
+{
+    color: #ffffff!important;
 }
 
-#bwh1 {
-    margin-top: 25px;
-    margin-bottom: 25px;
-
+nav ul li .active
+{
+    color: #3b3ebb;
 }
 
-#bwimg {
+
+body {
+    background: linear-gradient(270deg, #3bbb9a, #3b3ebb, #3ba9bb);
+    background-size: 600% 600%;
+    color: var(--clr-dark);
+    margin: 0;
+    font-family: var(--ff-primary);
+    font-size: var(--fs-body);
+    line-height: 1.6;
+
+    -webkit-animation: AnimationName 30s ease infinite;
+    -moz-animation: AnimationName 30s ease infinite;
+    animation: AnimationName 30s ease infinite;
+}
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+
+    
+}
+
+section{
+    padding: 5em 2em!important;
+}
+
+img{
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 25px;
-    border-radius: 50%;
-
+    max-width:100%;
 }
 
-#bwcolumn1 {
-    float:left; 
-    margin:0; 
-    width:33%; 
-    text-align: left;
+strong { font-weight: var(--fw-bold)!important; }
+
+:focus {
+    outline: 3px solid var(--clr-accent)!important;
+    outline-offset: 3px!important;
 }
 
-#bwcolumn2 {
-    float:left; 
-    margin:0;width:33%; 
+.btn {
+    display: inline-block!important;
+    padding: .5em 2.5em!important;
+    background: var(--clr-accent)!important;
+    color: var(--clr-dark)!important;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem!important;
+    text-transform: uppercase!important;
+    letter-spacing: 2px!important;
+    font-weight: var(--fw-bold)!important;
+    transition: transfrom 200ms ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(1.1)!important;
+}
+
+/*Typography*/
+h1,
+h2,
+h3 {
+    line-height: 1!important;
+    margin: 0!important;
+}
+h1 {font-size: var(--fs-h1)!important}
+h2 {font-size: var(--fs-h2)!important}
+h3 {font-size: var(--fs-h3)!important}
+
+.section__title {
+    margin-bottom: .25em!important;
+}
+
+.section__title--intro {
+    font-weight: var(--fw-reg)!important;
+}
+
+.section__title--intro strong {
+    display: block!important;
+}
+
+.section__subtitle {
+    margin: 0!important;
+    font-size: var(--fs-h3)!important;
+}
+
+.section__subtitle--intro,
+.section__subtitle--about {
+    background: var(--clr-accent)!important;
+    padding: .25em 1em!important;
+    font-family: var(--ff-secondary)!important;
+    margin-bottom: 1em!important;
+}
+
+.section__subtitle-work {
+    color: var(--clr-accent)!important;
+    font-weight: var(--fw-bold)!important;
+    margin-bottom: 2em!important;
+
+}
+/* header */
+
+nav { display: none; }
+
+/* intro section */
+
+.intro {
+    position: relative!important;
+}
+
+.intro__img {
+    box-shadow: var(--bs);
+    
+}
+
+.section__subtitle--intro {
+    display: inline-block!important;
+}
+
+@media (min-width: 600px) {
+    .intro{
+        display: grid!important;
+        width: min-content!important;
+        margin: 0 auto!important;
+        grid-column-gap: 1em!important;
+        grid-template-areas:
+        "img title"
+        "img subtitle";
+        grid-template-columns: min-content max-content;
+    }
+
+    .intro__img {
+        grid-area: img;
+        min-width: 250px;
+        position: relative;
+        z-index: 2;
+    }
+
+    .section__subtitle--intro {
+        align-self: start!important;
+        grid-column: -1 / 1!important;
+        grid-row: 2!important;
+        text-align: right!important;
+        position: relative!important;
+        left: -1.5em!important;
+        width: calc(100% + 1.5em)!important;
+    }
+}
+
+/* My services section */
+
+.my-services {
+    background-color: var(--clr-dark)!important;
+    background-image: url(https://images5.alphacoders.com/105/1056773.jpg)!important;
+    background-size: cover!important;
+    background-blend-mode: multiply!important;
+    color: var(--clr-light)!important;
+    text-align: center!important;
+}
+
+.section__title--services {
+    color: var(--clr-accent)!important;
+    position: relative!important;
+}
+
+.section__title--services::after{
+    content: ''!important;
+    display: block!important;
+    width: 2em!important;
+    height:1px!important;
+    margin: 0.5em auto 1em!important;
+    background: var(--clr-light)!important;
+    opacity: 0.25!important;
+}
+
+.services {
+    margin-bottom: 4em!important;
+}
+
+.service {
+    max-width: 500px!important;
+    margin: 0 auto!important;
+}
+
+@media (min-width: 800px) {
+    .services {
+        display: flex!important;
+        max-width: 1000px!important;
+        margin-left: auto!important;
+        margin-right: auto!important;
+    }
+
+    .service + .service {
+        margin-left: 2em!important;
+    }
+}
+
+.about-me {
+    max-width: 1000px!important;
+    margin: 0 auto!important;
+}
+
+.about-me__img {
+    box-shadow: var(--bs)!important;
+}
+
+@media (min-width: 600px) {
+    .about-me {
+        display: grid!important;
+        grid-template-columns: 1fr 200px!important;
+        grid-template-areas: 
+            "title img"
+            "subtitle img"
+            "text img"!important;
+            grid-column-gap: 2em!important;
+    }
+
+    .section__title--about {
+        grid-area: title;
+    }
+
+    .section__subtitle--about {
+        grid-column: 1 / -1;
+        grid-row: 2;
+        position: relative;
+        left: -1em;
+        width: calc(100% + 2em);
+        padding-left: 1em;
+        padding-right: calc(200px + 4em);
+    }
+
+    .about-me__img {
+        grid-area: img;
+        position: relative;
+        z-index: 2;
+    }
+}
+
+/* My work */
+
+.my-work {
+    background-color: var(--clr-dark);
+    color: var(--clr-light);
     text-align: center;
 }
 
-#bwcolumn3 {
-    float:left; 
-    margin:0;width:33%; 
-    text-align: left;
+.portfolio {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
-#a1 {
-    --i:1
+.portfolio__item {
+    background: var(--clr-accent);
+    overflow: hidden;
 }
 
-#a2 {
-    --i:2
+.portfolio__img {
+    transition: 
+    transform 750ms cubic-bezier(.5, 0, .5, 1),
+    opacity 250ms linear;
 }
 
-#a3 {
-    --i:3
+.portfolio__item:focus {
+    position: relative;
+    z-index: 2;
 }
 
-#a4 {
-    --i:4
+.portfolio__img:hover,
+.portfolio__item:focus .portfolio__img {
+    transform: scale(1.2);
+    opacity: .5;
 }
 
-#a5 {
-    --i:5
+/* footer */
+
+.footer {
+    background: #111;
+    color: var(--clr-accent);
+    text-align: center;
+    padding: 2.5em 0;
 }
 
-@keyframes bwh1a {
-    0%,40%,100% {
-      transform: translateY(0)
-    }
-    20% {
-      transform: translateY(-20px)
-    }
-  }
+.footer a { 
+    color: inherit;
+    text-decoration: none;
+}
+
+.footer__link {
+    font-weight: var(--fw-bold);
+}
+
+.footer__link:hover,
+.social-list__link:hover {
+    opacity: .7;
+}
+
+.footer__link:hover {
+    text-decoration: underline;
+}
+
+.social-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 2em 0 0;
+    padding: 0;
+}
+
+.social-list__item {
+    margin: 0 .5em;
+}
+
+.social-list__link {
+    padding: .5em;
+}
 
 /* Animation */
 html {
 	height: 100%;
-	margin: 0;
+    margin: 0;
 	padding: 0;
 	
 }
@@ -399,7 +459,7 @@ html {
 	}
 }
 
-.container {
+.containercircle {
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -409,15 +469,19 @@ html {
 }
 
 .animation {
-	width: 350px;
-	height: 350px;
+	width: 250px;
+	height: 250px;
 	box-sizing: border-box;
-	border: 5px rgb(63, 59, 59) solid;
+	border: 5px white solid;
 	border-radius: 50%;
 	overflow: hidden;
-	box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+	box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6)t;
 	transform: translatey(0px);
 	animation: float 6s ease-in-out infinite;
     
 }
 
+
+
+ 
+    
