--- a/Archery-Page/ArcheryStyle.css
+++ b/Archery-Page/ArcheryStyle.css
@@ -131,7 +131,7 @@ nav .navbar-nav li
     font-size:  18px;
     text-transform: uppercase;
     padding: 40px 20px;
-    text-align: right;
+    text-align: center;
     
 }
 nav .navbar-nav li a:hover
