--- a/Archery-Page/ArcheryStyle.css
+++ b/Archery-Page/ArcheryStyle.css
@@ -115,7 +115,7 @@ nav .navbar-brand
 
 .navbar-nav
 {
-    float: right;
+    float: left;
 }
 nav .navbar-nav li
 {
@@ -131,7 +131,7 @@ nav .navbar-nav li
     font-size:  18px;
     text-transform: uppercase;
     padding: 40px 20px;
-    text-align: center;
+    text-align: left;
     
 }
 nav .navbar-nav li a:hover
