--- a/Zackery-Page/ZackeryStyle.css
+++ b/Zackery-Page/ZackeryStyle.css
@@ -33,8 +33,8 @@
     }
 }
 
-/* Navigation */
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&display=swap');
+/* Navigation 
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&display=swap');*/
 *{
     margin: 0px;
     padding: 0px;
